# metube-vehicle-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  VEHICLE_DETECTION.md  docker-compose.example.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
app/: file_mover.py  main.py  plate_filter.py  vehicle_extractor.py  video_processor.py  ytdl.py
ui/src/app/: app.html  app.ts
ui/src/app/interfaces/: index.ts  processing.ts
ui/src/app/services/: downloads.service.ts
