[project]
name = "metube"
version = "0.1.0"
description = "Web GUI for youtube-dl (using yt-dlp) with playlist support"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "python-socketio>=5.0,<6.0",
    "yt-dlp[default,curl-cffi]",
    "mutagen",
    "curl-cffi",
    "watchfiles",
    # Vehicle and plate detection dependencies
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0",
    "fast-alpr>=1.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pylint",
]
